--- a/SeamCarving/SeamCarving.vcxproj
+++ b/SeamCarving/SeamCarving.vcxproj
@@ -71,13 +71,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)\.bin\$(Configuration)-$(Platform)\</OutDir>
+    <OutDir>$(SolutionDir)\bin\$(Configuration)-$(Platform)\</OutDir>
     <IntDir>$(SolutionDir)\.tmp\$(Configuration)-$(Platform)\</IntDir>
     <IncludePath>$(IncludePath)</IncludePath>
     <SourcePath>$(SourcePath);</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)\.bin\$(Configuration)-$(Platform)\</OutDir>
+    <OutDir>$(SolutionDir)\bin\$(Configuration)-$(Platform)\</OutDir>
     <IntDir>$(SolutionDir)\.tmp\$(Configuration)-$(Platform)\</IntDir>
     <IncludePath>$(IncludePath)</IncludePath>
     <SourcePath>$(SourcePath);</SourcePath>
@@ -110,12 +110,13 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level1</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Extern\imgui;$(SolutionDir)Extern\stb_image;$(SolutionDir)Extern\glew\include;$(SolutionDir)Extern\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -125,14 +126,14 @@
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q
+xcopy "$(ProjectDir)imgui.ini" "$(OutDir)\" /s /r /y /q
 xcopy /Y /I "$(SolutionDir)Extern\glfw\lib\glfw3.dll" "$(OutDir)"
-xcopy /Y /I "$(SolutionDir)Extern\glew\lib\glew32.dll" "$(OutDir)"
-xcopy /Y /I "$(ProjectDir)imgui.ini" "$(OutDir)"</Command>
+xcopy /Y /I "$(SolutionDir)Extern\glew\lib\glew32.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level1</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
@@ -140,6 +141,7 @@ xcopy /Y /I "$(ProjectDir)imgui.ini" "$(OutDir)"</Command>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)Extern\imgui;$(SolutionDir)Extern\stb_image;$(SolutionDir)Extern\glew\include;$(SolutionDir)Extern\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -149,23 +151,25 @@ xcopy /Y /I "$(ProjectDir)imgui.ini" "$(OutDir)"</Command>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q
+xcopy "$(ProjectDir)imgui.ini" "$(OutDir)\" /s /r /y /q
 xcopy /Y /I "$(SolutionDir)Extern\glfw\lib\glfw3.dll" "$(OutDir)"
-xcopy /Y /I "$(SolutionDir)Extern\glew\lib\glew32.dll" "$(OutDir)"
-xcopy /Y /I "$(ProjectDir)imgui.ini" "$(OutDir)"</Command>
+xcopy /Y /I "$(SolutionDir)Extern\glew\lib\glew32.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="glapp.cpp" />
-    <ClCompile Include="gui.cpp" />
-    <ClCompile Include="imguisetup.cpp" />
+    <ClCompile Include="Core\glapp.cpp" />
+    <ClCompile Include="Core\gui.cpp" />
+    <ClCompile Include="Core\imguisetup.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="stbloader.cpp" />
+    <ClCompile Include="SeamCarving\seamcarvingdp.cpp" />
+    <ClCompile Include="Core\stbloader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="glapp.hpp" />
-    <ClInclude Include="gui.hpp" />
+    <ClInclude Include="Core\glapp.hpp" />
+    <ClInclude Include="Core\gui.hpp" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="stbloader.hpp" />
+    <ClInclude Include="SeamCarving\seamcarvingdp.hpp" />
+    <ClInclude Include="Core\stbloader.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
