Seam Carving (Greedy Algorithm) Q2

--- a/SeamCarving/SeamCarving.vcxproj.filters
+++ b/SeamCarving/SeamCarving.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="SeamCarving\seamcarvingdp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SeamCarving\seamcarvinggreedy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SeamCarving\analysis.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\stbloader.hpp">
@@ -48,6 +54,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SeamCarving\seamcarvingdp.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SeamCarving\seamcarvinggreedy.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SeamCarving\analysis.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
