--- a/SeamCarving/imgui.ini
+++ b/SeamCarving/imgui.ini
@@ -25,10 +25,10 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Image Controls]
-Pos=831,0
-Size=449,316
+Pos=831,201
+Size=449,115
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000C,0
 
 [Window][Basic Controls]
 Pos=831,318
@@ -43,19 +43,43 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resize Controls (DP)]
-Pos=831,490
-Size=449,230
+Pos=831,318
+Size=449,113
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000D,0
+
+[Window][Basic Controls (DP)]
+Pos=831,101
+Size=449,98
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Basic Controls (Greedy)]
+Pos=831,0
+Size=449,99
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Analysis & Comparison]
+Pos=831,433
+Size=449,287
+Collapsed=0
+DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace         ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=1280,720 Split=X Selected=0x1EB64C52
-  DockNode        ID=0x00000001 Parent=0x7C6B3D9B SizeRef=829,720 CentralNode=1 Selected=0x1EB64C52
-  DockNode        ID=0x00000002 Parent=0x7C6B3D9B SizeRef=449,720 Split=Y Selected=0xE67D2CD1
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=435,261 Split=Y Selected=0xB1DC7AFC
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=435,114 Selected=0xAD2529FD
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=435,145 Split=Y Selected=0xB1DC7AFC
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=449,170 Selected=0xB1DC7AFC
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=449,230 Selected=0x7659BF07
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=435,457 Selected=0xE67D2CD1
+DockSpace           ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=1280,720 Split=X Selected=0x1EB64C52
+  DockNode          ID=0x00000001 Parent=0x7C6B3D9B SizeRef=829,720 CentralNode=1 Selected=0x1EB64C52
+  DockNode          ID=0x00000002 Parent=0x7C6B3D9B SizeRef=449,720 Split=Y Selected=0xE67D2CD1
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=435,261 Split=Y Selected=0xB1DC7AFC
+      DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=435,114 Split=Y Selected=0xAD2529FD
+        DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=449,99 Selected=0xB31A23A3
+        DockNode    ID=0x0000000A Parent=0x00000005 SizeRef=449,215 Split=Y Selected=0xAD2529FD
+          DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=449,98 Selected=0x8C2EF808
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=449,115 Selected=0xAD2529FD
+      DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=435,145 Split=Y Selected=0xB1DC7AFC
+        DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=449,170 Selected=0xB1DC7AFC
+        DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=449,230 Split=Y Selected=0x7659BF07
+          DockNode  ID=0x0000000D Parent=0x00000008 SizeRef=449,113 Selected=0x7659BF07
+          DockNode  ID=0x0000000E Parent=0x00000008 SizeRef=449,287 Selected=0x29A99940
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=435,457 Selected=0xE67D2CD1
 
