--- a/SeamCarving/SeamCarving.vcxproj
+++ b/SeamCarving/SeamCarving.vcxproj
@@ -161,15 +161,19 @@ xcopy /Y /I "$(SolutionDir)Extern\glew\lib\glew32.dll" "$(OutDir)"</Command>
     <ClCompile Include="Core\gui.cpp" />
     <ClCompile Include="Core\imguisetup.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SeamCarving\analysis.cpp" />
     <ClCompile Include="SeamCarving\seamcarvingdp.cpp" />
     <ClCompile Include="Core\stbloader.cpp" />
+    <ClCompile Include="SeamCarving\seamcarvinggreedy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\glapp.hpp" />
     <ClInclude Include="Core\gui.hpp" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="SeamCarving\analysis.hpp" />
     <ClInclude Include="SeamCarving\seamcarvingdp.hpp" />
     <ClInclude Include="Core\stbloader.hpp" />
+    <ClInclude Include="SeamCarving\seamcarvinggreedy.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
