Added Resize Image for Greedy

--- a/SeamCarving/imgui.ini
+++ b/SeamCarving/imgui.ini
@@ -26,13 +26,13 @@ DockId=0x00000001,0
 
 [Window][Image Controls]
 Pos=831,0
-Size=449,316
+Size=449,120
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Basic Controls]
-Pos=831,318
-Size=449,170
+Pos=831,122
+Size=449,285
 Collapsed=0
 DockId=0x00000007,0
 
@@ -43,19 +43,27 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resize Controls (DP)]
-Pos=831,490
-Size=449,230
+Pos=831,409
+Size=449,116
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
+
+[Window][Resize Controls (Greedy)]
+Pos=831,527
+Size=449,193
+Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
-DockSpace         ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=1280,720 Split=X Selected=0x1EB64C52
-  DockNode        ID=0x00000001 Parent=0x7C6B3D9B SizeRef=829,720 CentralNode=1 Selected=0x1EB64C52
-  DockNode        ID=0x00000002 Parent=0x7C6B3D9B SizeRef=449,720 Split=Y Selected=0xE67D2CD1
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=435,261 Split=Y Selected=0xB1DC7AFC
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=435,114 Selected=0xAD2529FD
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=435,145 Split=Y Selected=0xB1DC7AFC
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=449,170 Selected=0xB1DC7AFC
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=449,230 Selected=0x7659BF07
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=435,457 Selected=0xE67D2CD1
+DockSpace           ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=1280,720 Split=X Selected=0x1EB64C52
+  DockNode          ID=0x00000001 Parent=0x7C6B3D9B SizeRef=829,720 CentralNode=1 Selected=0x1EB64C52
+  DockNode          ID=0x00000002 Parent=0x7C6B3D9B SizeRef=449,720 Split=Y Selected=0xE67D2CD1
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=435,261 Split=Y Selected=0xB1DC7AFC
+      DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=435,120 Selected=0xAD2529FD
+      DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=435,598 Split=Y Selected=0xB1DC7AFC
+        DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=449,285 Selected=0xB1DC7AFC
+        DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=449,311 Split=Y Selected=0x7659BF07
+          DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=449,116 Selected=0x7659BF07
+          DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=449,193 Selected=0xA3BA5C83
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=435,457 Selected=0xE67D2CD1
 
