--- a/SeamCarving/imgui.ini
+++ b/SeamCarving/imgui.ini
@@ -11,67 +11,67 @@ Collapsed=0
 [Window][Texture and Buttons]
 Size=1280,720
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000C,0
 
 [Window][Seam Carving Example]
 Size=1280,720
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000C,0
 
 [Window][Image]
 Pos=0,0
-Size=737,720
+Size=756,720
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Image Controls]
-Pos=739,0
-Size=541,216
+Pos=758,0
+Size=522,217
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Basic Controls]
-Pos=739,218
-Size=282,289
+Pos=758,219
+Size=263,295
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000005,0
 
 [Window][Resize Controls]
 Pos=831,263
 Size=449,457
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][Resize Controls (DP)]
-Pos=739,612
-Size=541,108
-Collapsed=0
-DockId=0x0000000A,0
-
-[Window][Resize Controls (Greedy)]
-Pos=739,509
-Size=541,101
-Collapsed=0
-DockId=0x00000009,0
-
-[Window][Analysis & Comparison]
-Pos=1023,218
-Size=257,289
+Pos=758,618
+Size=522,102
 Collapsed=0
 DockId=0x0000000C,0
 
+[Window][Resize Controls (Greedy)]
+Pos=758,516
+Size=522,100
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Analysis & Comparison]
+Pos=1023,219
+Size=257,295
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
 DockSpace           ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=1280,720 Split=X Selected=0x1EB64C52
-  DockNode          ID=0x00000001 Parent=0x7C6B3D9B SizeRef=737,720 CentralNode=1 Selected=0x1EB64C52
-  DockNode          ID=0x00000002 Parent=0x7C6B3D9B SizeRef=541,720 Split=Y Selected=0xE67D2CD1
-    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=435,261 Split=Y Selected=0xB1DC7AFC
-      DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=435,216 Selected=0xAD2529FD
-      DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=435,502 Split=Y Selected=0xB1DC7AFC
-        DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=449,289 Split=X Selected=0xB1DC7AFC
-          DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=282,285 Selected=0xB1DC7AFC
-          DockNode  ID=0x0000000C Parent=0x00000007 SizeRef=257,285 Selected=0x29A99940
-        DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=449,211 Split=Y Selected=0xA3BA5C83
-          DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=500,101 Selected=0xA3BA5C83
-          DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=500,108 Selected=0x7659BF07
-    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=435,457 Selected=0xE67D2CD1
+  DockNode          ID=0x00000003 Parent=0x7C6B3D9B SizeRef=756,720 Selected=0x1EB64C52
+  DockNode          ID=0x00000004 Parent=0x7C6B3D9B SizeRef=522,720 Split=Y
+    DockNode        ID=0x00000007 Parent=0x00000004 SizeRef=1280,217 Selected=0xAD2529FD
+    DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=1280,501 Split=X
+      DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=737,720 Split=Y Selected=0x1EB64C52
+        DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=383,295 Split=X Selected=0xB1DC7AFC
+          DockNode  ID=0x00000005 Parent=0x00000009 SizeRef=263,247 Selected=0xB1DC7AFC
+          DockNode  ID=0x00000006 Parent=0x00000009 SizeRef=257,247 Selected=0x29A99940
+        DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=383,204 Split=Y
+          DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=383,100 Selected=0xA3BA5C83
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=383,102 CentralNode=1 Selected=0x7659BF07
+      DockNode      ID=0x00000002 Parent=0x00000008 SizeRef=541,720 Selected=0xE67D2CD1
 
